@@ -1,4 +1,4 @@
-SUBDIRS = turbocharger xml-rpc-api2cpp
+SUBDIRS = turbocharger @XML_RPC_API2CPP_SUBDIR@
 
 bin_SCRIPTS = xml-rpc-api2txt
 EXTRA_DIST = xml-rpc-api2txt
